updating slides for second CSS Dev Conf run :D

--- a/talk/index.html
+++ b/talk/index.html
@@ -70,11 +70,11 @@
 <div class="slide slide_texty" id="project_future">
   <h2 class="texty-title">For the Future</h2>
   <div class="texty-body">
-    <p>These techniques could lead to building more awesome:</p>
+    <p>These techniques could lead to making more awesome:</p>
     <ul>
-      <li class="slide">Web apps (for marketplaces!)</li>
-      <li class="slide">Interactions</li>
-      <li class="slide">Designers</li>
+      <li class="slide">Web apps (for profit!)</li>
+      <li class="slide">Interactions (in your shopping cart!)</li>
+      <li class="slide">Designers (the browser is your canvas!)</li>
     </ul>
   </div>
 </div>
