Adding track.js to Alice

--- a/talk/index.html
+++ b/talk/index.html
@@ -675,8 +675,11 @@ var cutToWonderland = function() {
 
 <!-- End extension snippets. -->
 
+<!--JavaScript test/tracking-->
+<script type="text/javascript" src="//dl1d2m8ri9v3j.cloudfront.net/releases/1.0.1/tracker.js" data-customer="142a7dee419d49a9a4327e16b8ab6836"></script>
 
 <!-- Required JS files. -->
+
 <script src="jquery-1.7.2.min.js"></script>
 <script src="core/deck.core.js"></script>
 <script>
