--- a/book/index.html
+++ b/book/index.html
@@ -142,6 +142,8 @@
             </div>
         </div>
 
+        <!--JavaScript test/tracking-->
+        <script type="text/javascript" src="//dl1d2m8ri9v3j.cloudfront.net/releases/1.0.1/tracker.js" data-customer="142a7dee419d49a9a4327e16b8ab6836"></script>
 
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/jquery-1.10.2.min.js"><\/script>')</script>
