Adding print styles required some renamery. Looking sharp.

--- a/book/index.html
+++ b/book/index.html
@@ -14,7 +14,7 @@
         <script type="text/javascript" src="//use.typekit.net/pxo8qyc.js"></script>
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
-        <link href="css/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> 
+        <link href="css/style.css" rel="stylesheet" type="text/css" /> 
 
         <script type="text/javascript">
             // analytics
