Adding a new animated background behind the hole.

--- a/book/index.html
+++ b/book/index.html
@@ -10,11 +10,11 @@
 
         <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">        
 
+        <link href="css/style.css" rel="stylesheet" type="text/css" /> 
+
         <script src="js/modernizr.min.js"></script>
         <script type="text/javascript" src="//use.typekit.net/pxo8qyc.js"></script>
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-
-        <link href="css/style.css" rel="stylesheet" type="text/css" /> 
 
         <script type="text/javascript">
             // analytics
@@ -65,6 +65,8 @@
             <div class="page page_the-hole">
                 <div class="foreground"></div>
                 <div class="rabbit"></div>
+                <div class="background"></div>
+                <div class="bg-hole"></div>
                 <p>She was just in time to see him pop down a hole between a great tree's roots.</p>
                 <a href="#tunnels" id="to-tunnels">Follow the rabbit?</a>
             </div>
