--- a/book/index.html
+++ b/book/index.html
@@ -153,7 +153,7 @@
             Modernizr.load([
                 {
                     test: Modernizr.touch,
-                    yep : ['js/jquery.hammer.min.js', 'js/jquery.visible.min.js']
+                    yep : ['js/hammer-1.0.6.min.js', 'js/jquery.hammer-1.0.0.min.js', 'js/jquery.visible.min.js']
                 }
             ]);
         </script>
