--- a/book/index.html
+++ b/book/index.html
@@ -146,20 +146,26 @@
 
         <!--JavaScript test/tracking-->
         <script type="text/javascript" src="//dl1d2m8ri9v3j.cloudfront.net/releases/1.0.1/tracker.js" data-customer="142a7dee419d49a9a4327e16b8ab6836"></script>
-
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/jquery-1.10.2.min.js"><\/script>')</script>
         <script>
             Modernizr.load([
                 {
+                    load: 'http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.js',
+                    complete: function () {
+                        if ( !window.jQuery ) {
+                            Modernizr.load('js/libs/jquery-1.10.2.min.js');
+                        }
+                    }
+                },
+                {
                     test: Modernizr.touch,
-                    yep : ['js/hammer-1.0.6.min.js', 'js/jquery.hammer-1.0.0.min.js', 'js/jquery.visible.min.js']
+                    yep : ['js/hammer-1.0.6.min.js','js/jquery.hammer-1.0.0.min.js', 'js/jquery.visible.min.js'],
+                    load : ['js/jquery.waypoints.min.js', 'js/jquery.waypoints-sticky.min.js', 'js/skrollr.min.js', 'js/script.js'],
+                    complete : function() {
+                        $(window).load(alice.windowLoaded());
+                    }
                 }
             ]);
         </script>
-        <script src="js/jquery.waypoints.min.js"></script>
-        <script src="js/jquery.waypoints-sticky.min.js"></script>
-        <script src="js/skrollr.min.js"></script>
-        <script src="js/script.js"></script>
+
     </body>
 </html>
