--- a/book/index.html
+++ b/book/index.html
@@ -119,12 +119,12 @@
                     <div class="tbc">
                         <h2>To be <strong><span>cont</span><span>inued</span><span>&hellip;</span></strong></h2>
                         <p class="newsletter">
-                            Want to know when the next installment comes out?
-                            <a href="http://eepurl.com/Gxv1j" class="tell-me">Let me send you updates!</a>
+                            Get updated when the next installment comes out!
+                            <a href="http://eepurl.com/Gxv1j" class="tell-me">Sign up!</a>
                         </p>
                     </div>
                     <div class="action">
-                        <h3>But you don't have to wait to have fun!</h3>
+                        <h3>Learn more&hellip;</h3>
                         <ul>
                             <li class="read"><a href="http://www.gutenberg.org/ebooks/11">
                                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" width="100px" height="100px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve"><path fill="#BF5C82" d="M49.94 22.41c-9.97-5.69-20.68-9.12-31.04-9.96v58.35c10.37 0.8 21.1 4.2 31 9.7V22.41z"/><path fill="#BF5C82" d="M82.81 12.44c-10.37 0.84-21.07 4.27-31.04 9.96v58.09c9.99-5.54 20.68-8.89 31.04-9.7V12.44z"/><path fill="#BF5C82" d="M49.6 83.51c0.81 0.3 1.7 0.3 2.5 0.01c11.66-5.04 23.86-7.31 35.8-6.79V18.96 c-1.07-0.05-2.15-0.06-3.24-0.06V72.5l-0.85 0.06c-10.67 0.7-21.73 4.18-32.02 10.05c-0.59 0.2-1.24 0.2-1.83 0 c-10.29-5.87-21.35-9.35-32.02-10.05l-0.85-0.06V18.91c-1.08 0-2.17 0.01-3.24 0.06v57.77C25.76 76.2 37.9 78.5 49.6 83.51z"/><path fill="#BF5C82" d="M92.95 25.45c-1.07-0.15-2.16-0.23-3.24-0.33v53.55l-0.97-0.06c-12.19-0.7-25.06 1.78-36.97 7.07l-0.92 0.4 l-0.92-0.38c-11.92-5.29-24.78-7.76-36.98-7.07L12 78.66V25.11c-1.08 0.11-2.17 0.19-3.24 0.33v58.71C9.35 84.5 9.8 84.9 9.8 84.9 c12.95-1.75 26.39-1.54 39.2 2.65c0.59-0.06 1.21-0.1 1.87-0.1c0.66 0 1.3 0 1.9 0.1c12.79-4.19 26.23-4.4 39.18-2.65 c0 0 0.47-0.46 1.04-0.75V25.45z"/></svg>
