Add arrow to indicate you should click the hole.

--- a/book/index.html
+++ b/book/index.html
@@ -68,7 +68,7 @@
                 <div class="background"></div>
                 <div class="bg-hole"></div>
                 <p>She was just in time to see him pop down a hole between a great tree's roots.</p>
-                <a href="#tunnels" id="to-tunnels">Follow the rabbit?</a>
+                <a href="#tunnels" id="to-tunnels" class="unactivated">Follow the rabbit?</a>
             </div>
         </div>
         
