--- a/book/index.html
+++ b/book/index.html
@@ -116,33 +116,35 @@
                 <div class="alice"></div>
                 <div class="rabbit"></div>
                 <div class="continued">
-                    <div class="tbc">
-                        <h2>To be <strong><span>cont</span><span>inued</span><span>&hellip;</span></strong></h2>
+                    <h2><strong>To be</strong> <span>cont</span><span>inued</span><span>&hellip;</span></h2>
+                    <div class="action">
                         <p class="newsletter">
-                            Get updated when the next installment comes out!
-                            <a href="http://eepurl.com/Gxv1j" class="tell-me">Sign up!</a>
+                            I can send you an email when the next installment comes out.
+                            <a href="http://eepurl.com/Gxv1j" class="tell-me">Get updates!</a>
                         </p>
                     </div>
-                    <div class="action">
-                        <h3>Learn more&hellip;</h3>
-                        <ul>
-                            <li class="read"><a href="http://www.gutenberg.org/ebooks/11">
-                                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" width="100px" height="100px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve"><path fill="#BF5C82" d="M49.94 22.41c-9.97-5.69-20.68-9.12-31.04-9.96v58.35c10.37 0.8 21.1 4.2 31 9.7V22.41z"/><path fill="#BF5C82" d="M82.81 12.44c-10.37 0.84-21.07 4.27-31.04 9.96v58.09c9.99-5.54 20.68-8.89 31.04-9.7V12.44z"/><path fill="#BF5C82" d="M49.6 83.51c0.81 0.3 1.7 0.3 2.5 0.01c11.66-5.04 23.86-7.31 35.8-6.79V18.96 c-1.07-0.05-2.15-0.06-3.24-0.06V72.5l-0.85 0.06c-10.67 0.7-21.73 4.18-32.02 10.05c-0.59 0.2-1.24 0.2-1.83 0 c-10.29-5.87-21.35-9.35-32.02-10.05l-0.85-0.06V18.91c-1.08 0-2.17 0.01-3.24 0.06v57.77C25.76 76.2 37.9 78.5 49.6 83.51z"/><path fill="#BF5C82" d="M92.95 25.45c-1.07-0.15-2.16-0.23-3.24-0.33v53.55l-0.97-0.06c-12.19-0.7-25.06 1.78-36.97 7.07l-0.92 0.4 l-0.92-0.38c-11.92-5.29-24.78-7.76-36.98-7.07L12 78.66V25.11c-1.08 0.11-2.17 0.19-3.24 0.33v58.71C9.35 84.5 9.8 84.9 9.8 84.9 c12.95-1.75 26.39-1.54 39.2 2.65c0.59-0.06 1.21-0.1 1.87-0.1c0.66 0 1.3 0 1.9 0.1c12.79-4.19 26.23-4.4 39.18-2.65 c0 0 0.47-0.46 1.04-0.75V25.45z"/></svg>
-                                <span><strong>Read</strong> <em>Alice in Wonderland</em> at Project Gutenberg</span></a></li>
-                            <li class="explore"><a href="http://artsy.net/gene/impressionism">
-                                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" width="100px" height="100px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve"><path fill="#BF5C82" d="M67.42 61.06c7.35-8.55-3.03-14.57 1.57-22.6c0.53-0.34 0.81-0.7 0.81-1.07c0-2.02-8.36-3.65-18.68-3.65 s-18.68 1.63-18.68 3.65c0 0.3 0.3 0.7 0.7 0.99c1.5 1.2 2 2.8 2.1 4.58c-12.83-8.78-17.24-1.55-10.89 10.1 c0.71 1.3 5.9 0.1 8.9 0.22c-0.35 2.08-0.36 4 0.5 5.66c1.18 2.2 3.5 3.9 6.5 5.22c0.31 0.8 0.7 2.38-1.22 3.5 c0 0 14.5 5.1 23.9-0.56c0 0-1.89 0.19-1.58-2.1C63.78 64.1 65.9 62.8 67.4 61.06z M33.54 51.7 c-1.79 0.04-3.77 0.73-6.85-1.03c-5.26-3.01-5.54-12.75 4.05-7.95l4.25 2.93C34.64 47.6 34 49.7 33.5 51.74z"/><path fill="#BF5C82" d="M95.38 80.3V18.95c1.33-1.13 2.18-2.82 2.18-4.7c0-3.41-2.77-6.18-6.18-6.18c-1.64 0-3.12 0.64-4.22 1.7 h-7.59C76.13 8 64.2 6.6 50 6.62S23.87 8 20.4 9.75H13.2c-1.13-1.33-2.82-2.18-4.7-2.18c-3.41 0-6.18 2.77-6.18 6.2 c0 1.6 0.6 3.1 1.7 4.22v63.31c-1.04 1.1-1.68 2.59-1.68 4.22c0 3.4 2.8 6.2 6.2 6.18c1.88 0 3.57-0.85 4.7-2.18h6.43 c2.61 1.9 15.1 3.4 30.1 3.43s27.44-1.48 30.05-3.43h7.41c1.1 1 2.6 1.7 4.2 1.68c3.41 0 6.18-2.77 6.18-6.18 C97.55 83.1 96.7 81.4 95.4 80.3z M13 80.5V18.75h73.38V80.5H13z"/></svg>
-                                <span><strong>Explore</strong> Impressionism at Artsy</span></a></li>
-                            <li class="learn"><a href="http://www.codecademy.com/tracks/web">
-                                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" width="100px" height="100px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve"><path fill="#BF5C82" d="M2.34 54.1C0.94 53.2 0 51.3 0 49.65c0-1.64 0.7-3.16 2.46-3.98H2.34c8.32-4.92 19.92-11.48 27.65-16.05 v10.9c-3.05 1.76-7.15 3.75-17.45 9.26l0.12 0.12c5.51 2.5 11.8 6.2 17.3 9.49v11.01L2.34 54.1z"/><path fill="#BF5C82" d="M97.66 45.9c1.4 0.9 2.3 2.8 2.3 4.45s-0.7 3.16-2.46 3.98h0.12c-8.32 4.92-19.92 11.48-27.65 16.1 V59.49c3.05-1.76 7.15-3.75 17.46-9.25l-0.12-0.12c-5.5-2.46-11.83-6.21-17.34-9.49V29.62L97.66 45.9z"/><path fill="#BF5C82" d="M46.4 71.84h-7.01l14.09-43.69h7.13L46.4 71.84z"/></svg>
-                                <span><strong>Learn</strong> <abbr title="Hypertext Markup Language">HTML</abbr>, <abbr title="Cascading Style Sheets">CSS</abbr> and JavaScript at Code Academy</span></a></li>
-                        </ul>
-                    </div>
-                    <p class="author">
+                    <div class="learning">
+                        <p class="author">
                         <a href="http://rachelnabors.com" class="img-wrap"><img src="img/p_selfie.png" /></a>
                         For more adventures in digital storytelling, check out my work at <a href="http://rachelnabors.com">RachelNabors.com</a></p>
+                       <hr />
+                        <ul>
+                            <li class="learn"><a href="http://www.codecademy.com/tracks/web">
+                                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" width="100px" height="100px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve"><path fill="#BF5C82" d="M2.34 54.1C0.94 53.2 0 51.3 0 49.65c0-1.64 0.7-3.16 2.46-3.98H2.34c8.32-4.92 19.92-11.48 27.65-16.05 v10.9c-3.05 1.76-7.15 3.75-17.45 9.26l0.12 0.12c5.51 2.5 11.8 6.2 17.3 9.49v11.01L2.34 54.1z"/><path fill="#BF5C82" d="M97.66 45.9c1.4 0.9 2.3 2.8 2.3 4.45s-0.7 3.16-2.46 3.98h0.12c-8.32 4.92-19.92 11.48-27.65 16.1 V59.49c3.05-1.76 7.15-3.75 17.46-9.25l-0.12-0.12c-5.5-2.46-11.83-6.21-17.34-9.49V29.62L97.66 45.9z"/><path fill="#BF5C82" d="M46.4 71.84h-7.01l14.09-43.69h7.13L46.4 71.84z"/></svg>
+                                <span><strong>Learn</strong> <abbr title="Hypertext Markup Language">HTML</abbr>, <abbr title="Cascading Style Sheets">CSS</abbr> and JavaScript <span class="source"><span class="at">at</span> Code Academy</span></span></a></li>
+                            <li class="read"><a href="http://www.gutenberg.org/ebooks/11">
+                                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" width="100px" height="100px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve"><path fill="#BF5C82" d="M49.94 22.41c-9.97-5.69-20.68-9.12-31.04-9.96v58.35c10.37 0.8 21.1 4.2 31 9.7V22.41z"/><path fill="#BF5C82" d="M82.81 12.44c-10.37 0.84-21.07 4.27-31.04 9.96v58.09c9.99-5.54 20.68-8.89 31.04-9.7V12.44z"/><path fill="#BF5C82" d="M49.6 83.51c0.81 0.3 1.7 0.3 2.5 0.01c11.66-5.04 23.86-7.31 35.8-6.79V18.96 c-1.07-0.05-2.15-0.06-3.24-0.06V72.5l-0.85 0.06c-10.67 0.7-21.73 4.18-32.02 10.05c-0.59 0.2-1.24 0.2-1.83 0 c-10.29-5.87-21.35-9.35-32.02-10.05l-0.85-0.06V18.91c-1.08 0-2.17 0.01-3.24 0.06v57.77C25.76 76.2 37.9 78.5 49.6 83.51z"/><path fill="#BF5C82" d="M92.95 25.45c-1.07-0.15-2.16-0.23-3.24-0.33v53.55l-0.97-0.06c-12.19-0.7-25.06 1.78-36.97 7.07l-0.92 0.4 l-0.92-0.38c-11.92-5.29-24.78-7.76-36.98-7.07L12 78.66V25.11c-1.08 0.11-2.17 0.19-3.24 0.33v58.71C9.35 84.5 9.8 84.9 9.8 84.9 c12.95-1.75 26.39-1.54 39.2 2.65c0.59-0.06 1.21-0.1 1.87-0.1c0.66 0 1.3 0 1.9 0.1c12.79-4.19 26.23-4.4 39.18-2.65 c0 0 0.47-0.46 1.04-0.75V25.45z"/></svg>
+                                <span><strong>Read</strong> <em>Alice in Wonderland</em> <span class="source"><span class="at">at</span> Project Gutenberg</span></span></a></li>
+                            <li class="explore"><a href="http://artsy.net/gene/impressionism">
+                                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" width="100px" height="100px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve"><path fill="#BF5C82" d="M67.42 61.06c7.35-8.55-3.03-14.57 1.57-22.6c0.53-0.34 0.81-0.7 0.81-1.07c0-2.02-8.36-3.65-18.68-3.65 s-18.68 1.63-18.68 3.65c0 0.3 0.3 0.7 0.7 0.99c1.5 1.2 2 2.8 2.1 4.58c-12.83-8.78-17.24-1.55-10.89 10.1 c0.71 1.3 5.9 0.1 8.9 0.22c-0.35 2.08-0.36 4 0.5 5.66c1.18 2.2 3.5 3.9 6.5 5.22c0.31 0.8 0.7 2.38-1.22 3.5 c0 0 14.5 5.1 23.9-0.56c0 0-1.89 0.19-1.58-2.1C63.78 64.1 65.9 62.8 67.4 61.06z M33.54 51.7 c-1.79 0.04-3.77 0.73-6.85-1.03c-5.26-3.01-5.54-12.75 4.05-7.95l4.25 2.93C34.64 47.6 34 49.7 33.5 51.74z"/><path fill="#BF5C82" d="M95.38 80.3V18.95c1.33-1.13 2.18-2.82 2.18-4.7c0-3.41-2.77-6.18-6.18-6.18c-1.64 0-3.12 0.64-4.22 1.7 h-7.59C76.13 8 64.2 6.6 50 6.62S23.87 8 20.4 9.75H13.2c-1.13-1.33-2.82-2.18-4.7-2.18c-3.41 0-6.18 2.77-6.18 6.2 c0 1.6 0.6 3.1 1.7 4.22v63.31c-1.04 1.1-1.68 2.59-1.68 4.22c0 3.4 2.8 6.2 6.2 6.18c1.88 0 3.57-0.85 4.7-2.18h6.43 c2.61 1.9 15.1 3.4 30.1 3.43s27.44-1.48 30.05-3.43h7.41c1.1 1 2.6 1.7 4.2 1.68c3.41 0 6.18-2.77 6.18-6.18 C97.55 83.1 96.7 81.4 95.4 80.3z M13 80.5V18.75h73.38V80.5H13z"/></svg>
+                                <span><strong>Explore</strong> Impressionism <span class="source"><span class="at">at</span> Artsy</span></span></a></li>
+
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
+
 
         <!--JavaScript test/tracking-->
         <script type="text/javascript" src="//dl1d2m8ri9v3j.cloudfront.net/releases/1.0.1/tracker.js" data-customer="142a7dee419d49a9a4327e16b8ab6836"></script>
