Adding image for FB share.

--- a/book/index.html
+++ b/book/index.html
@@ -6,10 +6,12 @@
 
         <title>Alice in Videoland: the Interactive Storybook</title>
 
-        <meta name="description" content="">
+        <meta name="description" content="Alice in Videoland is an interactive take on Lewis Carroll's classic tale, Alice in Wonderland, lovingly crafted in HTML5, CSS3, and JavaScript by Rachel Nabors.">
 
         <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">        
-
+        
+        <link rel="image_src" href="/img/i_alice-in-videoland.png"  />
+        
         <link href="css/style.css" rel="stylesheet" type="text/css" /> 
 
         <script src="js/modernizr.min.js"></script>
