--- a/book/index.html
+++ b/book/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js loading">
+<html class="no-js loading" itemscope itemtype="http://schema.org/CreativeWork">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -9,8 +9,6 @@
         <meta name="description" content="Alice in Videoland is an interactive take on Lewis Carroll's classic tale, Alice in Wonderland, lovingly crafted in HTML5, CSS3, and JavaScript by Rachel Nabors.">
 
         <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">        
-        
-        <link rel="image_src" href="img/i_alice-in-videoland.png"  />
         
         <link href="css/style.css" rel="stylesheet" type="text/css" /> 
 
@@ -31,6 +29,13 @@
             })();
 
         </script>
+
+        <meta property="og:title" content="Alice in Videoland" />
+        <meta property="og:image" content="img/i_alice-in-videoland.png" />
+        <meta property="og:url" content="http://share.rachelnabors.com/alice/" />
+        <meta property="og:description" content="An interactive take on Lewis Carroll's classic tale, lovingly crafted in HTML5, CSS3, and JavaScript by Rachel Nabors." />
+
+        <link rel="author" href="https://plus.google.com/+RachelNabors/posts"/>
     </head>
     <body>
         <div class="loading-card">
