Adding all the proper sharing metadata.

--- a/book/index.html
+++ b/book/index.html
@@ -31,11 +31,22 @@
         </script>
 
         <meta property="og:title" content="Alice in Videoland" />
-        <meta property="og:image" content="img/i_alice-in-videoland.png" />
+        <meta property="og:image" content="http://rachelnabors.com/alice-in-videoland/book/img/i_alice-in-videoland.png" />
         <meta property="og:url" content="http://share.rachelnabors.com/alice/" />
         <meta property="og:description" content="An interactive take on Lewis Carroll's classic tale, lovingly crafted in HTML5, CSS3, and JavaScript by Rachel Nabors." />
 
         <link rel="author" href="https://plus.google.com/+RachelNabors/posts"/>
+        <!-- Schema.org markup for Google+ -->
+        <meta itemprop="name" content="Alice in Videoland: the Interactive Storybook" />
+        <meta itemprop="description" content="An interactive take on Lewis Carroll's classic tale, lovingly crafted in HTML5, CSS3, and JavaScript by Rachel Nabors." />
+        <meta itemprop="image" content="http://rachelnabors.com/alice-in-videoland/book/img/i_alice-in-videoland.png" />
+
+        <!-- Twitter Card data -->
+        <meta name="twitter:card" content="summary" />
+        <meta name="twitter:site" content="@rachelnabors" />
+        <meta name="twitter:title" content="Alice in Videoland" />
+        <meta name="twitter:description" content="An interactive take on Lewis Carroll's classic tale, lovingly crafted in HTML5, CSS3, and JavaScript by @RachelNabors." />
+        <meta name="twitter:image:src" content="http://rachelnabors.com/alice-in-videoland/book/img/i_alice-in-videoland.png" />
     </head>
     <body>
         <div class="loading-card">
