--- a/book/index.html
+++ b/book/index.html
@@ -186,8 +186,8 @@
                 },
                 {
                     test: Modernizr.touch,
-                    yep : ['js/hammer-1.0.6.min.js','js/jquery.hammer-1.0.0.min.js', 'js/jquery.visible.min.js'],
-                    load : ['js/jquery.waypoints.min.js', 'js/jquery.waypoints-sticky.min.js', 'js/skrollr.min.js', 'js/jquery.debouncedresize.js']
+                    yep : ['js/jquery.hammer-1.0.0.min.js', 'js/jquery.visible.min.js'],
+                    load : ['js/jquery.waypoints.min.js', 'js/skrollr.min.js', 'js/jquery.debouncedresize.js']
                 },
                 {
                     load : 'js/script.js',
