Punching ending message.

--- a/talk/index.html
+++ b/talk/index.html
@@ -546,8 +546,8 @@ var cutToWonderland = function() {
 
 <div class="slide slide_interjection" id="touch_easy">
   <div class="vcenter">
-    <p class="statement">This was not easy.</p>
-    <p class="small-voice"><span>iOS Safari != Safari</span></p>
+    <p class="statement">People tell stories. Plural.</p>
+    <p class="small-voice"><span>Premise. Advice. Code.</span></p>
   </div>
 </div>
 
@@ -559,7 +559,7 @@ var cutToWonderland = function() {
 </div>
 
 <section class="slide slide_texty" id="slide_goodbye">
-  <h2 class="texty-title">Now go make something!!</h2>
+  <h2 class="texty-title">Now tell the story!!</h2>
   <div class="text-content">
     <div class="slide">
       <p>These slides: <a href="http://goo.gl/R4NRbx" target="_blank">http://goo.gl/R4NRbx</a></p>
