--- a/talk/index.html
+++ b/talk/index.html
@@ -328,7 +328,7 @@
 <div class="slide slide_texty" id="load_screen">
   <h2 class="texty-title">Animating the Load Screen</h2>
   <div class="texty-body">
-    <p>Follow along at <a href="http://codepen.io/rachelnabors/pres/modpi">cdpn.io/modpi</a></p>
+    <p>Follow along at <a href="http://codepen.io/rachelnabors/pres/modpi" target="_blank">cdpn.io/modpi</a></p>
     <p data-height="268" data-theme-id="0" data-slug-hash="modpi" data-user="rachelnabors" data-default-tab="result" class='codepen'>See the Pen <a href='http://codepen.io/rachelnabors/pen/modpi'>Alice in Videoland Load Screen</a> by Rachel Nabors (<a href='http://codepen.io/rachelnabors'>@rachelnabors</a>) on <a href='http://codepen.io'>CodePen</a></p>
     <ul>
       <li class="slide">The height is animated to &ldquo;roll the screen up&rdquo;.</li>
