Adding some slides for the smoovening for Rustbelt. Smoovening.

--- a/talk/index.html
+++ b/talk/index.html
@@ -44,13 +44,20 @@
   </div>
 </section>
 
-<!-- <section class="slide slide_about">
+<section class="slide slide_about">
   <figure>
     <img src="img/fig_rachel-tuna.png" alt="Rachel the Great and her talking cat Tuna, waving.">
-    <figcaption>Me circa 2007, makin' it &ldquo;big&rdquo; in comics (<a href="http://www.rachelthegreat.com" target="_blank">RacheltheGreat.com</a>)</figcaption>
+    <figcaption style="text-align: center">You can still read the comic adventures of Rachel and Tuna at <a href="http://www.rachelthegreat.com" target="_blank">RacheltheGreat.com</a></figcaption>
   </figure>
 </section>
- -->
+
+<section class="slide slide_about">
+  <figure>
+    <img src="img/p_square-bird-trans.png" alt="Tin Magpie">
+    <figcaption style="text-align: center">Now I tell stories using my front-end development skills at my company, <a href="http://www.tinmagpiebcom.com" target="_blank">TinMagpie.com</a></figcaption>
+  </figure>
+</section>
+
 <section class="slide slide_cover" id="cover_project">
   <div class="vcenter title-card">
     <h1 class="section-title">The Project</h1>
@@ -283,6 +290,14 @@
     <p class="footnote slide">(Psst, look at the paint rectangles.)</p>
   </div>
 </div>
+
+<section class="slide slide_about">
+  <figure>
+    <img src="img/fig_cheap-operations.jpg" alt="Modern browsers can animate four things really cheaply: position, scale, rotation and opacity, natch.">
+    <figcaption style="text-align: center">Heisted from <a href="http://www.html5rocks.com/en/tutorials/speed/high-performance-animations/" target="_blank">High Performance Animations</a> on HTML5 Rocks</figcaption>
+  </figure>
+</section>
+
 
 <div class="slide slide_texty">
   <h2 class="texty-title">Kicking it to the GPU</h2>
@@ -584,8 +599,7 @@ var cutToWonderland = function() {
     </div>
     <div class="slide">
       <ul>
-<!--         <li><a href="http://tinmagpie.com" target="_blank">tinmagpie.com</a> : we tell stories with code</li>
- -->
+        <li><a href="http://tinmagpie.com" target="_blank">tinmagpie.com</a> : we tell stories with code</li>
         <li><a href="http://theinfinitecanvas.com" target="_blank">theinfinitecanvas.com</a> : my screencast</li>
         <li><a href="https://twitter.com/rachelnabors" target="_blank">@rachelnabors</a> : show me what you make</li>
         <li><a href="http://rachelnabors.com" target="_blank">rachelnabors.com</a> : more projects</li>
