adding a comic about gifs.

--- a/talk/index.html
+++ b/talk/index.html
@@ -44,6 +44,9 @@
   </div>
 </section>
 
+<div class="slide slide_topical" id="cat-gifs">
+</div>
+
 <section class="slide slide_about">
   <figure>
     <img src="img/fig_rachel-tuna.png" alt="Rachel the Great and her talking cat Tuna, waving.">
