Removing performance since I don't actually use it like that in the book anymore.

--- a/talk/index.html
+++ b/talk/index.html
@@ -85,7 +85,7 @@
       <li class="slide">Retina and images</li>
       <li class="slide">Handling a shifting environment with modernizr</li>
       <li class="slide">Loading assets</li>
-      <li class="slide">Performance</li>
+      <!-- <li class="slide">Performance</li> -->
       <li class="slide">Parallax</li>
       <li class="slide">Reconciling touch with click</li>
     </ul>
@@ -276,7 +276,7 @@
   </div>
 </div>
 
-<section class="slide slide_cover" id="cover_performance">
+<!-- <section class="slide slide_cover" id="cover_performance">
   <div class="vcenter title-card">
     <h1 class="section-title">Performance Problems</h1>
   </div>
@@ -305,19 +305,7 @@
   <p>Check out the code at <a href="http://codepen.io/rachelnabors/pres/qnEhd?editors=110" target="_blank">cdpn.io/qnEhd</a></p>
   <p data-height="268" data-theme-id="0" data-slug-hash="qnEhd" data-user="rachelnabors" data-default-tab="result" class='codepen'>See the Pen <a href='http://codepen.io/rachelnabors/pen/qnEhd'>Down the Hipster Rabbit Hole</a> by Rachel Nabors (<a href='http://codepen.io/rachelnabors'>@rachelnabors</a>) on <a href='http://codepen.io'>CodePen</a></p>
   <script async src="http://codepen.io/assets/embed/ei.js"></script>
-</div>
-
-<div class="slide slide_texty" id="rwd_resize">
-  <h2 class="texty-title">Dealing with Resizes</h2>
-  <div class="texty-body">
-    <p>There's a lot of math being done, and all of it relies on measuring <em>visible</em> elements. You'll have to re/take these measurements whenever:</p>
-    <ul>
-      <li class="slide">the browser window is <strong>resized</strong></li>
-      <li class="slide">content is <strong>revealed</strong></li>
-      <li class="slide">device <strong>orientation changes</strong></li>
-    </ul>
-  </div>
-</div>
+</div> -->
 
 <section class="slide slide_cover" id="cover_load">
   <div class="vcenter title-card">
@@ -410,6 +398,18 @@ var downTheHole = function() {
     <ul>
       <li class="slide">Handy screen height calculator: <code>$.waypoints('viewportHeight')</code></li>
       <li class="slide">Sweet <a href="http://imakewebthings.com/jquery-waypoints/shortcuts/sticky-elements/" target="_blank">sticky elements shortcut</a> (as used on Alice in the tunnel).</li>
+    </ul>
+  </div>
+</div>
+
+<div class="slide slide_texty" id="rwd_resize">
+  <h2 class="texty-title">Dealing with Resizes</h2>
+  <div class="texty-body">
+    <p>There's a lot of math being done, and all of it relies on measuring <em>visible</em> elements. You'll have to re/take these measurements whenever:</p>
+    <ul>
+      <li class="slide">the browser window is <strong>resized</strong></li>
+      <li class="slide">content is <strong>revealed</strong></li>
+      <li class="slide">device <strong>orientation changes</strong></li>
     </ul>
   </div>
 </div>
