Hide unneeded codepens

--- a/talk/index.html
+++ b/talk/index.html
@@ -332,8 +332,8 @@
   <h2 class="texty-title">Animating the Load Screen</h2>
   <div class="texty-body">
     <p>Follow along at <a href="http://codepen.io/rachelnabors/pres/modpi" target="_blank">cdpn.io/modpi</a></p>
-    <p data-height="268" data-theme-id="0" data-slug-hash="modpi" data-user="rachelnabors" data-default-tab="result" class='codepen'>See the Pen <a href='http://codepen.io/rachelnabors/pen/modpi'>Alice in Videoland Load Screen</a> by Rachel Nabors (<a href='http://codepen.io/rachelnabors'>@rachelnabors</a>) on <a href='http://codepen.io'>CodePen</a></p>
-    <ul>
+<!--     <p data-height="268" data-theme-id="0" data-slug-hash="modpi" data-user="rachelnabors" data-default-tab="result" class='codepen'>See the Pen <a href='http://codepen.io/rachelnabors/pen/modpi'>Alice in Videoland Load Screen</a> by Rachel Nabors (<a href='http://codepen.io/rachelnabors'>@rachelnabors</a>) on <a href='http://codepen.io'>CodePen</a></p>
+ -->    <ul>
       <li class="slide">The height is animated to &ldquo;roll the screen up&rdquo;.</li>
       <li class="slide">The cup and saucer use <a href="http://cubic-bezier.com/" target="_blank">custom cubic beziers</a> on their animations to add bounce.</li>
     </ul>
@@ -444,8 +444,8 @@ window.addEventListener('orientationchange', recalcWaypoints);</pre>
   <div class="texty-body">
     <p>I used <a href="https://github.com/Prinzhorn/skrollr" target="_blank">skrollr.js</a>.</p>
     <p>Follow along at <a target="_blank" href="http://codepen.io/rachelnabors/pres/AeEHw">cdpn.io/AeEHw</a></p>
-    <p data-height="268" data-theme-id="0" data-slug-hash="AeEHw" data-user="rachelnabors" data-default-tab="result" class='codepen'>See the Pen <a href='http://codepen.io/rachelnabors/pen/AeEHw'>Falling Down the Rabbit Hole</a> by Rachel Nabors (<a href='http://codepen.io/rachelnabors'>@rachelnabors</a>) on <a href='http://codepen.io'>CodePen</a></p>
-  </div>
+<!--     <p data-height="268" data-theme-id="0" data-slug-hash="AeEHw" data-user="rachelnabors" data-default-tab="result" class='codepen'>See the Pen <a href='http://codepen.io/rachelnabors/pen/AeEHw'>Falling Down the Rabbit Hole</a> by Rachel Nabors (<a href='http://codepen.io/rachelnabors'>@rachelnabors</a>) on <a href='http://codepen.io'>CodePen</a></p>
+ -->  </div>
 </div>
 
 <div class="slide slide_texty" id="parallax_skrollr">
