--- a/talk/index.html
+++ b/talk/index.html
@@ -583,13 +583,13 @@ var cutToWonderland = function() {
 </div>
 
 
-<!-- <div class="slide slide_interjection alt" id="thanks">
+<div class="slide slide_interjection alt" id="thanks">
   <div class="vcenter">
     <p class="statement">Thank you!</p>
-    <p class="small-voice"><span>Squee, Denmark!</span></p>
+    <p class="small-voice"><span>CSS 4EVAH!</span></p>
   </div>
 </div>
- -->
+
 <section class="slide slide_texty" id="slide_goodbye">
   <h2 class="texty-title">Now tell the story!!</h2>
   <div class="text-content">
