added the slidey bits for CSS dev conf

--- a/talk/index.html
+++ b/talk/index.html
@@ -577,10 +577,17 @@ var cutToWonderland = function() {
 
 <div class="slide slide_interjection" id="touch_easy">
   <div class="vcenter">
+    <p class="statement">Text <em>#storytelling 5 Brilliant!</em> to 504-229-6828</p>
+    <p class="small-voice"><span>Do eet.</span></p>
+  </div>
+</div>
+
+<!-- <div class="slide slide_interjection" id="touch_easy">
+  <div class="vcenter">
     <p class="statement"><a href="http://eepurl.com/Gxv1j" target="_blank">eepurl.com/Gxv1j</a></p>
     <p class="small-voice"><span>Part II comes out in fall, and I need your help.</span></p>
   </div>
-</div>
+</div> -->
 
 
 <div class="slide slide_interjection alt" id="thanks">
@@ -600,9 +607,9 @@ var cutToWonderland = function() {
     <div class="slide">
       <ul>
         <li><a href="http://tinmagpie.com" target="_blank">tinmagpie.com</a> : we tell stories with code</li>
-        <li><a href="http://theinfinitecanvas.com" target="_blank">theinfinitecanvas.com</a> : my screencast</li>
-        <li><a href="https://twitter.com/rachelnabors" target="_blank">@rachelnabors</a> : show me what you make</li>
         <li><a href="http://rachelnabors.com" target="_blank">rachelnabors.com</a> : more projects</li>
+        <li><a href="http://rachelnabors.com" target="_blank">rachelnabors.com/training</a> : training!</li>
+        <li><a href="https://twitter.com/rachelnabors" target="_blank">@rachelnabors</a> : show me what you make</li>
       </ul>
     </div>
   </div>
