update training link

--- a/talk/index.html
+++ b/talk/index.html
@@ -608,7 +608,7 @@ var cutToWonderland = function() {
       <ul>
         <li><a href="http://tinmagpie.com" target="_blank">tinmagpie.com</a> : we tell stories with code</li>
         <li><a href="http://rachelnabors.com" target="_blank">rachelnabors.com</a> : more projects</li>
-        <li><a href="http://rachelnabors.com" target="_blank">rachelnabors.com/training</a> : training!</li>
+        <li><a href="http://rachelnabors.com/training" target="_blank">rachelnabors.com/training</a> : training!</li>
         <li><a href="https://twitter.com/rachelnabors" target="_blank">@rachelnabors</a> : show me what you make</li>
       </ul>
     </div>
