adding the cues to the scenes with intersection observer

--- a/book/index.html
+++ b/book/index.html
@@ -12,7 +12,7 @@
 
         <link href="css/style.css" rel="stylesheet" type="text/css" />
 
-        <script src="js/modernizr.min.js"></script>
+        <!-- <script src="js/modernizr.min.js"></script> -->
         <script type="text/javascript" src="//use.typekit.net/pxo8qyc.js"></script>
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
@@ -171,9 +171,10 @@
             </div>
         </div>
 
+        <script type="text/javascript" src="js/rescripted.js"></script>
 
         <!--JavaScript test/tracking-->
-        <script type="text/javascript" src="//dl1d2m8ri9v3j.cloudfront.net/releases/1.0.1/tracker.js" data-customer="142a7dee419d49a9a4327e16b8ab6836"></script>
+        <!-- <script type="text/javascript" src="//dl1d2m8ri9v3j.cloudfront.net/releases/1.0.1/tracker.js" data-customer="142a7dee419d49a9a4327e16b8ab6836"></script>
         <script>
             Modernizr.load([
                 {
@@ -196,7 +197,7 @@
                     }
                 }
             ]);
-        </script>
+        </script> -->
 
     </body>
 </html>
