--- a/book/index.html
+++ b/book/index.html
@@ -171,7 +171,7 @@
             </div>
         </div>
 
-        <script type="text/javascript" src="js/rescripted.js"></script>
+        <script type="module" src="js/rescripted.js"></script>
 
         <!--JavaScript test/tracking-->
         <!-- <script type="text/javascript" src="//dl1d2m8ri9v3j.cloudfront.net/releases/1.0.1/tracker.js" data-customer="142a7dee419d49a9a4327e16b8ab6836"></script>
