making it so clicking on the rabbit hold scrolls down with scroll-behavior: smooth

--- a/book/index.html
+++ b/book/index.html
@@ -86,7 +86,7 @@
                 <div class="background"></div>
                 <div class="bg-hole"></div>
                 <p>She was just in time to see him pop down a hole between a great tree's roots.</p>
-                <a href="#tunnels" id="to-tunnels" class="unactivated"><span>Follow the rabbit?</span></a>
+                <a href="#page_falling-frightened" id="to-tunnels" class="unactivated"><span>Follow the rabbit?</span></a>
             </div>
         </div>
 
@@ -98,7 +98,7 @@
 
                 <div class="alice-falling"></div>
                 <div class="cheshire-cat"></div>
-                <div class="page page_falling falling_frightened" data-mood="frightened">
+                <div id="page_falling-frightened" class="page page_falling falling_frightened" data-mood="frightened">
                     <p>In another moment down went Alice after him without a thought as to how she’d get out again. She plummeted head over heels into what must have been an old, capped well.</p>
                     <p>Either the well was very deep or she fell very slowly, for she had plenty of time to look about her on the way down.</p>
                 </div>
