added scene cut behavior which we can reuse for fun later.

--- a/book/index.html
+++ b/book/index.html
@@ -122,11 +122,11 @@
             </div><!--/#tunnel-->
         </div>
 
-        <div class="scene scene-cut">
+        <div class="scene cue" id="scene-cut">
             <p>But before she could answer, her fall came to an end with a startling thump.</p>
         </div>
 
-        <div class="scene scene-wonderland">
+        <div class="scene scene-wonderland" id="scene_wonderland">
             <div class="page page_crash-landing">
                 <p>She tumbled out onto a heap of sticks and leaves at the end of a long passage. And there, scampering to the other end, went the White Rabbit in his porkpie hat.</p>
             </div>
