making the scroll timeline for the tunnels, but alice's emotions still need to be on a view timeline. Will ask Bramus on Break to fix

--- a/book/index.html
+++ b/book/index.html
@@ -86,7 +86,7 @@
                 <div class="background"></div>
                 <div class="bg-hole"></div>
                 <p>She was just in time to see him pop down a hole between a great tree's roots.</p>
-                <a href="#page_falling-frightened" id="to-tunnels" class="unactivated"><span>Follow the rabbit?</span></a>
+                <a href="#tunnel" id="to-tunnels" class="unactivated"><span>Follow the rabbit?</span></a>
             </div>
         </div>
 
@@ -94,32 +94,20 @@
             <div class="page page_tunnels">
                 <p>In another moment down went Alice after him without a thought as to how she’d get out again. She plummeted head over heels into what must have been an old, capped well.</p>
             </div>
-            <div id="tunnel">
-
-                <div class="alice-falling"></div>
-                <div class="cheshire-cat"></div>
-                <div id="page_falling-frightened" class="page page_falling falling_frightened" data-mood="frightened">
-                    <p>In another moment down went Alice after him without a thought as to how she’d get out again. She plummeted head over heels into what must have been an old, capped well.</p>
-                    <p>Either the well was very deep or she fell very slowly, for she had plenty of time to look about her on the way down.</p>
-                </div>
-                <div class="page page_falling falling_curious" data-mood="curious">
-                    <p>At first it was too dark for her to see anything, but as her eyes adjusted, she could make out what seemed to be cupboards, bookshelves, paintings, lining the walls she was rushing past. </p>
-                </div>
-                <div class="page page_falling falling_bored" data-mood="bored">
-                    <p>Down, down, down she fell. Would it never come to an end? She began to wonder how many miles she’d fallen and whether she’d end up at the center of the Earth&mdash;or come out the other side!</p>
-                </div>
-                <div class="page page_falling falling_sleeping" data-mood="sleeping">
-                    <p>How would she call her sister? What if she didn’t speak the language? What if they couldn’t understand her and put her in an orphanage? She’d never see her sister or her cat again!</p>
-                    <p>Poor Tuna! Would they remember to clean his litter box or give him his kibble? If only Tuna were with her now. There were no mice to live on in the air, but perhaps he could catch a bat. </p>
-                </div>
-
-                    <!-- Wait 3 seconds or so for the video to end. Then return to the scene -->
-                <div class="page page_falling falling_weird" data-mood="sleeping">
-                    <p>Before she could worry too much, her eyes grew heavy and she began to nod off whispering, “Do cats eat bats?” to no one in particular.</p>
-                    <p>She must’ve been dreaming, because for a moment she imagined he was there with her, as large as her sister.</p>
-                    <p>&ldquo;Oh yes, cats eat bats all the time. You wouldn’t happen to be a bat, now would you?&rdquo;</p>
-                </div>
-            </div><!--/#tunnel-->
+            <div id="tunnel" class="page page_falling">
+                <div class="alice-falling" id="alice_falling"></div>
+                <!-- <div class="cheshire-cat"></div> -->
+                <p>In another moment down went Alice after him without a thought as to how she’d get out again. She plummeted head over heels into what must have been an old, capped well.</p>
+                <p>Either the well was very deep or she fell very slowly, for she had plenty of time to look about her on the way down.</p>
+                <p>At first it was too dark for her to see anything, but as her eyes adjusted, she could make out what seemed to be cupboards, bookshelves, paintings, lining the walls she was rushing past. </p>
+                <p>Down, down, down she fell. Would it never come to an end? She began to wonder how many miles she’d fallen and whether she’d end up at the center of the Earth&mdash;or come out the other side!</p>
+                <p>How would she call her sister? What if she didn’t speak the language? What if they couldn’t understand her and put her in an orphanage? She’d never see her sister or her cat again!</p>
+                <p>Poor Tuna! Would they remember to clean his litter box or give him his kibble? If only Tuna were with her now. There were no mice to live on in the air, but perhaps he could catch a bat. </p>
+                <!-- Stretch goal: add video from cheshire folder. Play as background. Then return to the scene with Alice alarmed see also .falling_weird-->
+                <p>Before she could worry too much, her eyes grew heavy and she began to nod off whispering, “Do cats eat bats?” to no one in particular.</p>
+                <p>She must’ve been dreaming, because for a moment she imagined he was there with her, as large as her sister.</p>
+                <p>&ldquo;Oh yes, cats eat bats all the time. You wouldn’t happen to be a bat, now would you?&rdquo;</p>
+            </div>
         </div>
 
         <div class="scene cue" id="scene-cut">
