adding second page

--- a/book/index.html
+++ b/book/index.html
@@ -79,11 +79,11 @@
 
         <!-- Twitter Card data -->
         <meta name="twitter:card" content="summary" />
-        <meta name="twitter:site" content="@rachelnabors" />
+        <meta name="twitter:site" content="@nearestnabors" />
         <meta name="twitter:title" content="Alice in Videoland" />
         <meta
             name="twitter:description"
-            content="An interactive take on Lewis Carroll's classic tale, lovingly crafted in HTML5, CSS3, and JavaScript by @RachelNabors."
+            content="An interactive take on Lewis Carroll's classic tale, lovingly crafted in HTML, CSS5, and JavaScript by @NearestNabors."
         />
         <meta
             name="twitter:image:src"
@@ -235,16 +235,16 @@
             </p>
         </div>
 
-        <div class="scene scene-wonderland" id="scene_wonderland">
+        <!-- <div class="scene scene-wonderland" id="scene_wonderland">
             <div class="page page_crash-landing">
                 <p>
                     She tumbled out onto a heap of sticks and leaves at the end
                     of a long passage. And there, scampering to the other end,
                     went the White Rabbit in his porkpie hat.
                 </p>
-            </div>
+            </div> -->
             <!-- If you keep this, use columns/grid, CSS4! -->
-            <div class="page page_credits">
+            <!-- <div class="page page_credits">
                 <div class="alice"></div>
                 <div class="rabbit"></div>
                 <div class="continued">
@@ -376,7 +376,7 @@
                         </ul>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
 
         <script type="module" src="js/rescripted.js"></script>
