moving WAAPI demo into second page and adding animation to it

--- a/book/index.html
+++ b/book/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
         <title>Alice in Videoland: the Interactive Storybook</title>
+        <link rel="expect" blocking="render" href="#loading_card">
 
         <meta
             name="description"
@@ -91,7 +92,7 @@
         />
     </head>
     <body>
-        <div class="loading-card">
+        <div class="loading-card" id="loading_card">
             <h1>Alice in Videoland</h1>
             <h2 class="byline">
                 A retelling of Lewis Carroll's classic in pixels and HTML by
