--- a/book/rabbit-hole.html
+++ b/book/rabbit-hole.html
@@ -9,7 +9,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
         <title>Alice in Videoland Interactive Storybook, page 2</title>
-
+        <link rel="expect" blocking="render" href="#loading-card" />
         <meta
             name="description"
             content="Alice in Videoland is an interactive take on Lewis Carroll's classic tale, Alice in Wonderland, lovingly crafted in HTML, CSS5, and JavaScript by R L Nabors."
